[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/shop/shop.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/button/bg.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/button/bg_press.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/ui/icon/repair.png" type="Texture" id=7]

[node name="shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.941176 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 1366.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1359.0
margin_bottom = 73.0

[node name="btn" type="MarginContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 66.0
rect_min_size = Vector2( 100, 0 )

[node name="exit" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/btn"]
margin_right = 100.0
margin_bottom = 66.0
rect_min_size = Vector2( 100, 50 )

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer/btn"]
margin_top = 19.0
margin_right = 100.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin" type="CenterContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 1248.0
margin_bottom = 66.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer/margin"]
margin_left = 507.0
margin_top = 3.0
margin_right = 636.0
margin_bottom = 63.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Shop"
align = 1
valign = 1

[node name="margin2" type="MarginContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 1252.0
margin_right = 1352.0
margin_bottom = 66.0
rect_min_size = Vector2( 100, 0 )

[node name="name_button2" type="MarginContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/margin2"]
margin_right = 100.0
margin_bottom = 66.0
size_flags_horizontal = 8

[node name="cash" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer/margin2/name_button2"]
margin_right = 100.0
margin_bottom = 66.0
rect_min_size = Vector2( 100, 50 )
size_flags_vertical = 5
custom_fonts/font = ExtResource( 2 )
text = "$200"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 1366.0
margin_bottom = 800.0
size_flags_vertical = 3

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 180.0
margin_bottom = 716.0
rect_min_size = Vector2( 180, 80 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 173.0
margin_bottom = 709.0

[node name="btn_service" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer"]
margin_right = 166.0
margin_bottom = 172.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="btn_service" type="Button" parent="VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer/btn_service"]
margin_right = 166.0
margin_bottom = 172.0
rect_min_size = Vector2( 100, 50 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer/btn_service"]
margin_top = 72.0
margin_right = 166.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
text = "Service"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_upgrade" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer"]
margin_top = 176.0
margin_right = 166.0
margin_bottom = 349.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="btn_upgrade" type="Button" parent="VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer/btn_upgrade"]
margin_right = 166.0
margin_bottom = 173.0
rect_min_size = Vector2( 100, 50 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer/btn_upgrade"]
margin_top = 72.0
margin_right = 166.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
text = "Upgrade"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_depot" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer"]
margin_top = 353.0
margin_right = 166.0
margin_bottom = 525.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="btn_depot" type="Button" parent="VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer/btn_depot"]
margin_right = 166.0
margin_bottom = 172.0
rect_min_size = Vector2( 100, 50 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer/btn_depot"]
margin_top = 72.0
margin_right = 166.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
text = "Depot"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_market" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer"]
margin_top = 529.0
margin_right = 166.0
margin_bottom = 702.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="btn_market" type="Button" parent="VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer/btn_market"]
margin_right = 166.0
margin_bottom = 173.0
rect_min_size = Vector2( 100, 50 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer/btn_market"]
margin_top = 72.0
margin_right = 166.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
text = "Market"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 184.0
margin_right = 1366.0
margin_bottom = 716.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="service_page" type="ScrollContainer" parent="VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_right = 1182.0
margin_bottom = 716.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/HBoxContainer/service_page"]
margin_right = 1182.0
margin_bottom = 564.0
size_flags_horizontal = 3

[node name="label" type="Label" parent="VBoxContainer/HBoxContainer2/HBoxContainer/service_page/VBoxContainer"]
margin_right = 1182.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 6 )
text = " Workshop : "

[node name="repair_panel" type="Control" parent="VBoxContainer/HBoxContainer2/HBoxContainer/service_page/VBoxContainer"]
margin_top = 44.0
margin_right = 1182.0
margin_bottom = 344.0
rect_min_size = Vector2( 0, 300 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer2/HBoxContainer/service_page/VBoxContainer/repair_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/HBoxContainer/service_page/VBoxContainer/repair_panel/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 17.0
margin_right = -35.0
margin_bottom = -16.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/HBoxContainer/service_page/VBoxContainer/repair_panel/Panel/HBoxContainer"]
margin_right = 250.0
margin_bottom = 267.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2/HBoxContainer/service_page/VBoxContainer/repair_panel/Panel/HBoxContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 180.0
rect_min_size = Vector2( 150, 180 )
texture = ExtResource( 7 )
stretch_mode = 4

[node name="label" type="Label" parent="VBoxContainer/HBoxContainer2/HBoxContainer/service_page/VBoxContainer/repair_panel/Panel/HBoxContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 250.0
margin_bottom = 212.0
custom_fonts/font = ExtResource( 2 )
text = "Repair Airship"
align = 1

[node name="cost" type="Label" parent="VBoxContainer/HBoxContainer2/HBoxContainer/service_page/VBoxContainer/repair_panel/Panel/HBoxContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 250.0
margin_bottom = 244.0
custom_fonts/font = ExtResource( 2 )
text = "Cost : $250"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/HBoxContainer/service_page/VBoxContainer/repair_panel/Panel/HBoxContainer"]
margin_left = 254.0
margin_right = 823.0
margin_bottom = 267.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="btn_repair" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/HBoxContainer/service_page/VBoxContainer/repair_panel/Panel/HBoxContainer"]
margin_left = 827.0
margin_top = 187.0
margin_right = 1127.0
margin_bottom = 267.0
rect_min_size = Vector2( 300, 80 )
size_flags_vertical = 8

[node name="btn_repair" type="TextureButton" parent="VBoxContainer/HBoxContainer2/HBoxContainer/service_page/VBoxContainer/repair_panel/Panel/HBoxContainer/btn_repair"]
modulate = Color( 0.670588, 0.498039, 0.0392157, 1 )
margin_right = 300.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 50 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/HBoxContainer/service_page/VBoxContainer/repair_panel/Panel/HBoxContainer/btn_repair"]
margin_top = 26.0
margin_right = 300.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
text = "Repair"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label2" type="Label" parent="VBoxContainer/HBoxContainer2/HBoxContainer/service_page/VBoxContainer"]
margin_top = 348.0
margin_right = 1182.0
margin_bottom = 431.0
custom_fonts/font = ExtResource( 6 )
text = "
 Armory : "

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/HBoxContainer/service_page/VBoxContainer"]
margin_top = 435.0
margin_right = 1182.0
margin_bottom = 435.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/HBoxContainer/service_page/VBoxContainer"]
margin_top = 439.0
margin_right = 1182.0
margin_bottom = 564.0
rect_min_size = Vector2( 0, 125 )

[node name="upgrade_page" type="ScrollContainer" parent="VBoxContainer/HBoxContainer2/HBoxContainer"]
visible = false
margin_right = 1366.0
margin_bottom = 632.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/HBoxContainer/upgrade_page"]
margin_right = 1366.0
margin_bottom = 427.0
size_flags_horizontal = 3

[node name="label3" type="Label" parent="VBoxContainer/HBoxContainer2/HBoxContainer/upgrade_page/VBoxContainer"]
margin_right = 1366.0
margin_bottom = 427.0
custom_fonts/font = ExtResource( 6 )
text = "



 Coming soon...




"
align = 1

[node name="depot_page" type="ScrollContainer" parent="VBoxContainer/HBoxContainer2/HBoxContainer"]
visible = false
margin_left = 456.0
margin_right = 909.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/HBoxContainer/depot_page"]
margin_right = 453.0
margin_bottom = 427.0
size_flags_horizontal = 3

[node name="label4" type="Label" parent="VBoxContainer/HBoxContainer2/HBoxContainer/depot_page/VBoxContainer"]
margin_left = -456.0
margin_right = 910.0
margin_bottom = 427.0
custom_fonts/font = ExtResource( 6 )
text = "



 Coming soon...




"
align = 1

[node name="market_page" type="ScrollContainer" parent="VBoxContainer/HBoxContainer2/HBoxContainer"]
visible = false
margin_left = 685.0
margin_right = 1366.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/HBoxContainer/market_page"]
margin_right = 681.0
margin_bottom = 427.0
size_flags_horizontal = 3

[node name="label5" type="Label" parent="VBoxContainer/HBoxContainer2/HBoxContainer/market_page/VBoxContainer"]
margin_left = -685.0
margin_right = 681.0
margin_bottom = 427.0
custom_fonts/font = ExtResource( 6 )
text = "



 Coming soon...




"
align = 1

[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/btn/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer/btn_service/btn_service" to="." method="_on_btn_service_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer/btn_upgrade/btn_upgrade" to="." method="_on_btn_upgrade_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer/btn_depot/btn_depot" to="." method="_on_btn_depot_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer/btn_market/btn_market" to="." method="_on_btn_market_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/HBoxContainer/service_page/VBoxContainer/repair_panel/Panel/HBoxContainer/btn_repair/btn_repair" to="." method="_on_btn_repair_pressed"]
